ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-inventory-ingress
  namespace: omar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: library-inventory-service
                port:
                  number: 5000
